// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for hideLabel: false, state: { base: true, xs: false, s: true, m: false, l: true, xl: false } and theme: none 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(min-width:480px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 4px;
  }
}

@media(min-width:760px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0 4px;
  }
}

@media(min-width:1000px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 4px;
  }
}

@media(min-width:1300px) {
  .label__text {
    position: absolute;
    height: 1px;
    width: fit-content;
    border: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(1px,1px,1px,1px);
    clip-path: inset(50%);
    white-space: nowrap;
    padding: 0 0 4px;
  }
}

@media(min-width:1760px) {
  .label__text {
    position: static;
    width: fit-content;
    height: auto;
    margin: 0;
    overflow: visible;
    clip: auto;
    clip-path: none;
    white-space: normal;
    padding: 0 0 4px;
  }
}

@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and theme: error 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #E7323B !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #c51720 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #c51720 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and theme: error 2`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #CB3333 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #CB3333 !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #9a2727 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #FBFCFF;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #9a2727 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and theme: none 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and theme: none 2`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #7E7F82 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #AFB0B3 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #FBFCFF;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])) {
    border-color: #FBFCFF !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and theme: success 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #32B85B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #32B85B !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: false and theme: success 2`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #00C77E !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #00C77E !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #008a57 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: static;
  width: fit-content;
  height: auto;
  margin: 0;
  overflow: visible;
  clip: auto;
  clip-path: none;
  white-space: normal;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #FBFCFF;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #00C77E;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #008a57 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and theme: error 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #E7323B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #E7323B !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #c51720 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #E7323B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #c51720 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and theme: error 2`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #CB3333 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #CB3333 !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #9a2727 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #FBFCFF;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #9a2727 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and theme: none 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #949598 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #010205 !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #010205 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])) {
    border-color: #010205 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and theme: none 2`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #7E7F82 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.6875rem 2.9375rem 0.6875rem 0.6875rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #FBFCFF !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #AFB0B3 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #FBFCFF;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])) {
    border-color: #FBFCFF !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and theme: success 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #32B85B !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #010205 !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #32B85B !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #949598 !important;
  border-color: #949598 !important;
  -webkit-text-fill-color: #949598 !important;
  background: #FFF !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #010205;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #535457;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #010205;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #32B85B;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #258843 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: false, state: true and theme: success 2`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #00C77E !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #00C77E !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #008a57 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #FBFCFF;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
  color: #AFB0B3;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #FBFCFF;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #00C77E;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #008a57 !important;
  }
}
"
`;

exports[`getComponentCss() should return correct css for hideLabel: true, state: true and theme: error 1`] = `
":host {
  display: block !important;
}
:host([hidden]) {
  display: none !important;
}
::slotted(select) {
  display: block !important;
  position: static !important;
  width: 100% !important;
  height: 3.375rem !important;
  outline: 2px solid transparent !important;
  outline-offset: 2px !important;
  -webkit-appearance: none !important;
  appearance: none !important;
  box-sizing: border-box !important;
  border: 2px solid #CB3333 !important;
  border-radius: 4px !important;
  background: transparent !important;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif !important;
  text-indent: 0 !important;
  color: #FBFCFF !important;
  transition: border-color var(--p-transition-duration, .24s) ease !important;
  cursor: pointer !important;
  padding: 0.625rem 2.9375rem 0.625rem 0.625rem !important;
}
::slotted(select)@-moz-document url-prefix() {
  padding-left: 0.5rem !important;
}
::slotted(select:focus) {
  border-color: #CB3333 !important;
  outline-color: #0A0AFF !important;
}
::slotted(select:focus:not(:focus-visible)) {
  outline-color: transparent !important;
}
::slotted(select:disabled) {
  cursor: not-allowed !important;
  color: #7E7F82 !important;
  border-color: #7E7F82 !important;
  -webkit-text-fill-color: #7E7F82 !important;
  background: #010205 !important;
}
@media(hover:hover) {
  ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #9a2727 !important;
  }
}

.root {
  display: block;
  position: relative;
}
.label {
  display: block;
  position: relative;
}
.label__text {
  display: block;
  position: absolute;
  height: 1px;
  width: fit-content;
  border: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(1px,1px,1px,1px);
  clip-path: inset(50%);
  white-space: nowrap;
  padding: 0 0 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #7E7F82;
}
.label__text+.label__text {
  margin-top: -4px;
  font-size: .875rem;
}
.icon {
  position: absolute;
  bottom: 0.75rem;
  right: 0.75rem;
  color: #7E7F82;
  pointer-events: none;
  transform: rotate3d(0,0,1,0.0001deg);
  transition: transform var(--p-transition-duration, .24s) ease;
  cursor: not-allowed;
}
.icon--open {
  transform: rotate3d(0,0,1,180deg);
}
.required {
  user-select: none;
}
.message {
  display: flex;
  gap: 4px;
  margin-top: 4px;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #CB3333;
  transition: color var(--p-transition-duration, .24s) ease;
}
@media(hover:hover) {
  .label__text:hover~::slotted(select:not(:disabled):not([readonly])), .label__text:hover ::slotted(select:not(:disabled):not([readonly]):hover) {
    border-color: #9a2727 !important;
  }
}
"
`;
